src/SimpleSchemaCodeGenerator/SimpleSchema/Grammar/GeneratedCode/SimpleSchemaParser.py
# Generated from C:\Code\v2\Common\Environment\Libraries\Python\CommonEnvironment\v1.0\CommonEnvironment\SimpleSchema\Grammar\BuildEnvironment\..\SimpleSchema.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO


class SimpleSchemaParser ( Parser ):

    grammarFileName = "SimpleSchema.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"'('", u"')'", u"'['", u"']'", u"'<'", 
                     u"'>'", u"'{'", u"'}'", u"<INVALID>", u"'pass'", u"'include'", 
                     u"'config'", u"'string'", u"'enum'", u"'integer'", 
                     u"'number'", u"'boolean'", u"'guid'", u"'datetime'", 
                     u"'date'", u"'time'", u"'duration'", u"'filename'", 
                     u"'custom'", u"'validation'", u"'min_length'", u"'max_length'", 
                     u"'values'", u"'friendly_values'", u"'min'", u"'max'", 
                     u"'bytes'", u"'type'", u"'must_exist'", u"'t'", u"'description'", 
                     u"'plural'", u"'default'", u"'polymorphic'", u"'suppress_polymorphic'", 
                     u"':'", u"'='", u"','", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"'?'", u"'*'", u"'+'" ]

    symbolicNames = [ u"<INVALID>", u"MULTI_LINE_NEWLINE", u"NEWLINE", u"MULTI_LINE_ESCAPE", 
                      u"HORIZONTAL_WHITESPACE", u"LPAREN", u"RPAREN", u"LBRACK", 
                      u"RBRACK", u"LT", u"GT", u"LBRACE", u"RBRACE", u"COMMENT", 
                      u"PASS", u"INCLUDE", u"CONFIG", u"STRING_TYPE", u"ENUM_TYPE", 
                      u"INTEGER_TYPE", u"NUMBER_TYPE", u"BOOLEAN_TYPE", 
                      u"GUID_TYPE", u"DATETIME_TYPE", u"DATE_TYPE", u"TIME_TYPE", 
                      u"DURATION_TYPE", u"FILENAME_TYPE", u"CUSTOM_TYPE", 
                      u"STRING_METADATA_VALIDATION", u"STRING_METADATA_MIN_LENGTH", 
                      u"STRING_METADATA_MAX_LENGTH", u"ENUM_METADATA_VALUES", 
                      u"ENUM_METADATA_FRIENDLY_VALUES", u"METADATA_MIN", 
                      u"METADATA_MAX", u"INTEGER_METADATA_BYTES", u"FILENAME_METADATA_TYPE", 
                      u"FILENAME_METADATA_MUST_EXIST", u"CUSTOM_METADATA_T", 
                      u"GENERIC_METADATA_DESCRIPTION", u"GENERIC_METADATA_PLURAL", 
                      u"GENERIC_METADATA_DEFAULT", u"GENERIC_METADATA_POLYMORPHIC", 
                      u"GENERIC_METADATA_SUPPRESS_POLYMORPHIC", u"SCOPE_DELIMITER", 
                      u"ASSIGNMENT", u"COMMA", u"INT", u"NUMBER", u"ID", 
                      u"ARITY_OPTIONAL", u"ARITY_ZERO_OR_MORE", u"ARITY_ONE_OR_MORE", 
                      u"DOUBLE_QUOTE_NUMBER", u"SINGLE_QUOTE_NUMBER", u"DOUBLE_QUOTE_INT", 
                      u"SINGLE_QUOTE_INT", u"DOUBLE_QUOTE_BOOL", u"SINGLE_QUOTE_BOOL", 
                      u"DOUBLE_QUOTE_FILENAME_TYPE", u"SINGLE_QUOTE_FILENAME_TYPE", 
                      u"DOUBLE_QUOTE_STRING", u"SINGLE_QUOTE_STRING", u"TRIPLE_DOUBLE_QUOTE_STRING", 
                      u"TRIPLE_SINGLE_QUOTE_STRING", u"INDENT", u"DEDENT" ]

    RULE_numberString = 0
    RULE_intString = 1
    RULE_boolString = 2
    RULE_filenameTypeString = 3
    RULE_string = 4
    RULE_enhancedString = 5
    RULE_arg = 6
    RULE_listArg = 7
    RULE_statements = 8
    RULE_headerStatement__ = 9
    RULE_standardStatement__ = 10
    RULE_includeStatement__ = 11
    RULE_includeStatement_Name = 12
    RULE_configDeclaration = 13
    RULE_configDeclaration_Name = 14
    RULE_configDeclaration_Content__ = 15
    RULE_unnamedObj = 16
    RULE_obj = 17
    RULE_obj_Name = 18
    RULE_obj_Base = 19
    RULE_obj_Declaration__ = 20
    RULE_obj_Content__ = 21
    RULE_unnamedDeclaration = 22
    RULE_declaration = 23
    RULE_declaration_Name = 24
    RULE_declaration_Content__ = 25
    RULE_declaration_Type = 26
    RULE_declaration_Metadata__ = 27
    RULE_declaration_Metadata_Description = 28
    RULE_declaration_Metadata_Plural = 29
    RULE_declaration_Metadata_Default = 30
    RULE_declaration_Metadata_Polymorphic = 31
    RULE_declaration_Metadata_SuppressPolymorphic = 32
    RULE_stringMetadata__ = 33
    RULE_stringMetadata_Validation = 34
    RULE_stringMetadata_MaxLength = 35
    RULE_stringMetadata_MinLength = 36
    RULE_enumValues__ = 37
    RULE_enumValues_Values = 38
    RULE_enumMetadata__ = 39
    RULE_enumMetadata_FriendlyValues = 40
    RULE_enum_StringList = 41
    RULE_integerMetadata__ = 42
    RULE_integerMetadata_Bytes = 43
    RULE_integerMetadata_Max = 44
    RULE_integerMetadata_Min = 45
    RULE_numberMetadata__ = 46
    RULE_numberMetadata_Max = 47
    RULE_numberMetadata_Min = 48
    RULE_filenameMetadata__ = 49
    RULE_filenameMetadata_Type = 50
    RULE_filenameMetadata_MustExist = 51
    RULE_customMetadata__ = 52
    RULE_customMetadata_Type = 53
    RULE_metadata__ = 54
    RULE_metadata_Name = 55
    RULE_arity__ = 56
    RULE_arity_Optional = 57
    RULE_arity_ZeroOrMore = 58
    RULE_arity_OneOrMore = 59
    RULE_arity_Custom = 60
    RULE_arity_CustomRange = 61
    RULE_extension = 62
    RULE_extension_Name = 63
    RULE_extension_Content__ = 64
    RULE_extension_Content_Standard__ = 65
    RULE_extension_Content_Positional = 66
    RULE_extension_Content_Keywords__ = 67
    RULE_extension_Content_Keyword__ = 68
    RULE_extension_Content_Keyword_Name = 69

    ruleNames =  [ u"numberString", u"intString", u"boolString", u"filenameTypeString", 
                   u"string", u"enhancedString", u"arg", u"listArg", u"statements", 
                   u"headerStatement__", u"standardStatement__", u"includeStatement__", 
                   u"includeStatement_Name", u"configDeclaration", u"configDeclaration_Name", 
                   u"configDeclaration_Content__", u"unnamedObj", u"obj", 
                   u"obj_Name", u"obj_Base", u"obj_Declaration__", u"obj_Content__", 
                   u"unnamedDeclaration", u"declaration", u"declaration_Name", 
                   u"declaration_Content__", u"declaration_Type", u"declaration_Metadata__", 
                   u"declaration_Metadata_Description", u"declaration_Metadata_Plural", 
                   u"declaration_Metadata_Default", u"declaration_Metadata_Polymorphic", 
                   u"declaration_Metadata_SuppressPolymorphic", u"stringMetadata__", 
                   u"stringMetadata_Validation", u"stringMetadata_MaxLength", 
                   u"stringMetadata_MinLength", u"enumValues__", u"enumValues_Values", 
                   u"enumMetadata__", u"enumMetadata_FriendlyValues", u"enum_StringList", 
                   u"integerMetadata__", u"integerMetadata_Bytes", u"integerMetadata_Max", 
                   u"integerMetadata_Min", u"numberMetadata__", u"numberMetadata_Max", 
                   u"numberMetadata_Min", u"filenameMetadata__", u"filenameMetadata_Type", 
                   u"filenameMetadata_MustExist", u"customMetadata__", u"customMetadata_Type", 
                   u"metadata__", u"metadata_Name", u"arity__", u"arity_Optional", 
                   u"arity_ZeroOrMore", u"arity_OneOrMore", u"arity_Custom", 
                   u"arity_CustomRange", u"extension", u"extension_Name", 
                   u"extension_Content__", u"extension_Content_Standard__", 
                   u"extension_Content_Positional", u"extension_Content_Keywords__", 
                   u"extension_Content_Keyword__", u"extension_Content_Keyword_Name" ]

    EOF = Token.EOF
    MULTI_LINE_NEWLINE=1
    NEWLINE=2
    MULTI_LINE_ESCAPE=3
    HORIZONTAL_WHITESPACE=4
    LPAREN=5
    RPAREN=6
    LBRACK=7
    RBRACK=8
    LT=9
    GT=10
    LBRACE=11
    RBRACE=12
    COMMENT=13
    PASS=14
    INCLUDE=15
    CONFIG=16
    STRING_TYPE=17
    ENUM_TYPE=18
    INTEGER_TYPE=19
    NUMBER_TYPE=20
    BOOLEAN_TYPE=21
    GUID_TYPE=22
    DATETIME_TYPE=23
    DATE_TYPE=24
    TIME_TYPE=25
    DURATION_TYPE=26
    FILENAME_TYPE=27
    CUSTOM_TYPE=28
    STRING_METADATA_VALIDATION=29
    STRING_METADATA_MIN_LENGTH=30
    STRING_METADATA_MAX_LENGTH=31
    ENUM_METADATA_VALUES=32
    ENUM_METADATA_FRIENDLY_VALUES=33
    METADATA_MIN=34
    METADATA_MAX=35
    INTEGER_METADATA_BYTES=36
    FILENAME_METADATA_TYPE=37
    FILENAME_METADATA_MUST_EXIST=38
    CUSTOM_METADATA_T=39
    GENERIC_METADATA_DESCRIPTION=40
    GENERIC_METADATA_PLURAL=41
    GENERIC_METADATA_DEFAULT=42
    GENERIC_METADATA_POLYMORPHIC=43
    GENERIC_METADATA_SUPPRESS_POLYMORPHIC=44
    SCOPE_DELIMITER=45
    ASSIGNMENT=46
    COMMA=47
    INT=48
    NUMBER=49
    ID=50
    ARITY_OPTIONAL=51
    ARITY_ZERO_OR_MORE=52
    ARITY_ONE_OR_MORE=53
    DOUBLE_QUOTE_NUMBER=54
    SINGLE_QUOTE_NUMBER=55
    DOUBLE_QUOTE_INT=56
    SINGLE_QUOTE_INT=57
    DOUBLE_QUOTE_BOOL=58
    SINGLE_QUOTE_BOOL=59
    DOUBLE_QUOTE_FILENAME_TYPE=60
    SINGLE_QUOTE_FILENAME_TYPE=61
    DOUBLE_QUOTE_STRING=62
    SINGLE_QUOTE_STRING=63
    TRIPLE_DOUBLE_QUOTE_STRING=64
    TRIPLE_SINGLE_QUOTE_STRING=65
    INDENT=66
    DEDENT=67

    def __init__(self, input):
        super(SimpleSchemaParser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class NumberStringContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SimpleSchemaParser.NumberStringContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE_QUOTE_NUMBER(self):
            return self.getToken(SimpleSchemaParser.DOUBLE_QUOTE_NUMBER, 0)

        def SINGLE_QUOTE_NUMBER(self):
            return self.getToken(SimpleSchemaParser.SINGLE_QUOTE_NUMBER, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_numberString

        def accept(self, visitor):
            if hasattr(visitor, "visitNumberString"):
                return visitor.visitNumberString(self)
            else:
                return visitor.visitChildren(self)




    def numberString(self):

        localctx = SimpleSchemaParser.NumberStringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_numberString)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            _la = self._input.LA(1)
            if not(_la==SimpleSchemaParser.DOUBLE_QUOTE_NUMBER or _la==SimpleSchemaParser.SINGLE_QUOTE_NUMBER):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntStringContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SimpleSchemaParser.IntStringContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE_QUOTE_INT(self):
            return self.getToken(SimpleSchemaParser.DOUBLE_QUOTE_INT, 0)

        def SINGLE_QUOTE_INT(self):
            return self.getToken(SimpleSchemaParser.SINGLE_QUOTE_INT, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_intString

        def accept(self, visitor):
            if hasattr(visitor, "visitIntString"):
                return visitor.visitIntString(self)
            else:
                return visitor.visitChildren(self)




    def intString(self):

        localctx = SimpleSchemaParser.IntStringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_intString)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            _la = self._input.LA(1)
            if not(_la==SimpleSchemaParser.DOUBLE_QUOTE_INT or _la==SimpleSchemaParser.SINGLE_QUOTE_INT):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BoolStringContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SimpleSchemaParser.BoolStringContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE_QUOTE_BOOL(self):
            return self.getToken(SimpleSchemaParser.DOUBLE_QUOTE_BOOL, 0)

        def SINGLE_QUOTE_BOOL(self):
            return self.getToken(SimpleSchemaParser.SINGLE_QUOTE_BOOL, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_boolString

        def accept(self, visitor):
            if hasattr(visitor, "visitBoolString"):
                return visitor.visitBoolString(self)
            else:
                return visitor.visitChildren(self)




    def boolString(self):

        localctx = SimpleSchemaParser.BoolStringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_boolString)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            _la = self._input.LA(1)
            if not(_la==SimpleSchemaParser.DOUBLE_QUOTE_BOOL or _la==SimpleSchemaParser.SINGLE_QUOTE_BOOL):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FilenameTypeStringContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SimpleSchemaParser.FilenameTypeStringContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE_QUOTE_FILENAME_TYPE(self):
            return self.getToken(SimpleSchemaParser.DOUBLE_QUOTE_FILENAME_TYPE, 0)

        def SINGLE_QUOTE_FILENAME_TYPE(self):
            return self.getToken(SimpleSchemaParser.SINGLE_QUOTE_FILENAME_TYPE, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_filenameTypeString

        def accept(self, visitor):
            if hasattr(visitor, "visitFilenameTypeString"):
                return visitor.visitFilenameTypeString(self)
            else:
                return visitor.visitChildren(self)




    def filenameTypeString(self):

        localctx = SimpleSchemaParser.FilenameTypeStringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_filenameTypeString)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            _la = self._input.LA(1)
            if not(_la==SimpleSchemaParser.DOUBLE_QUOTE_FILENAME_TYPE or _la==SimpleSchemaParser.SINGLE_QUOTE_FILENAME_TYPE):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StringContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SimpleSchemaParser.StringContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE_QUOTE_STRING(self):
            return self.getToken(SimpleSchemaParser.DOUBLE_QUOTE_STRING, 0)

        def SINGLE_QUOTE_STRING(self):
            return self.getToken(SimpleSchemaParser.SINGLE_QUOTE_STRING, 0)

        def DOUBLE_QUOTE_NUMBER(self):
            return self.getToken(SimpleSchemaParser.DOUBLE_QUOTE_NUMBER, 0)

        def SINGLE_QUOTE_NUMBER(self):
            return self.getToken(SimpleSchemaParser.SINGLE_QUOTE_NUMBER, 0)

        def DOUBLE_QUOTE_INT(self):
            return self.getToken(SimpleSchemaParser.DOUBLE_QUOTE_INT, 0)

        def SINGLE_QUOTE_INT(self):
            return self.getToken(SimpleSchemaParser.SINGLE_QUOTE_INT, 0)

        def DOUBLE_QUOTE_BOOL(self):
            return self.getToken(SimpleSchemaParser.DOUBLE_QUOTE_BOOL, 0)

        def SINGLE_QUOTE_BOOL(self):
            return self.getToken(SimpleSchemaParser.SINGLE_QUOTE_BOOL, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_string

        def accept(self, visitor):
            if hasattr(visitor, "visitString"):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = SimpleSchemaParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_string)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleSchemaParser.DOUBLE_QUOTE_NUMBER) | (1 << SimpleSchemaParser.SINGLE_QUOTE_NUMBER) | (1 << SimpleSchemaParser.DOUBLE_QUOTE_INT) | (1 << SimpleSchemaParser.SINGLE_QUOTE_INT) | (1 << SimpleSchemaParser.DOUBLE_QUOTE_BOOL) | (1 << SimpleSchemaParser.SINGLE_QUOTE_BOOL) | (1 << SimpleSchemaParser.DOUBLE_QUOTE_STRING) | (1 << SimpleSchemaParser.SINGLE_QUOTE_STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnhancedStringContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SimpleSchemaParser.EnhancedStringContext, self).__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(SimpleSchemaParser.StringContext,0)


        def TRIPLE_DOUBLE_QUOTE_STRING(self):
            return self.getToken(SimpleSchemaParser.TRIPLE_DOUBLE_QUOTE_STRING, 0)

        def TRIPLE_SINGLE_QUOTE_STRING(self):
